# elk-experiments

./: .gitignore  .gitmodules  README.md  convert_nb.sh  pyproject.toml
elk_experiments/: auto_circuit_detector.py  auto_circuit_utils.py  circuit_hypotests.py  eap_detector.py  mask_gradient_instance.py  tiny_natural_mechanisms_utils.py  utils.py
elk_experiments/auto_circuit/: auto_circuit_utils.py  circuit_hypotests.py  edge_graph.py  node_graph.py  tasks.py
elk_experiments/auto_circuit/hypo_tests/: equiv_test.py  indep_test.py  minimality_test.py
jobs/: hypothesis_tests.ipynb  hypothesis_tests.py
notebooks/: .gitignore  arc_tasks.ipynb  auto_circuit_auto_encoder.ipynb  auto_circuit_eap_mahalanobis.ipynb  circuit_pruning_detector.ipynb  debug_eap_batching.ipynb  debug_graph.ipynb  divdis.ipynb  does_backwards_effect_grads.ipynb  eap-detector-hex.ipynb  eap_hex.ipynb  eap_resid_bug.ipynb  eap_supervised_probes.ipynb  explore_auto_circuit.ipynb  explore_eap_graphs_hex.ipynb  filter_auto_model.ipynb  fix_atten_out.ipynb  grammar_natural_mechanism_distinction.ipynb  hex_completion_token_metric.ipynb  hypothesis_tests.ipynb  if_else_qk_ov.ipynb  instance_auto_circuits.ipynb  instance_circuits.ipynb  measurement_tampering.ipynb  natural_mechanism_distinction_exploration.ipynb  plot_scores_and_ablations.ipynb  pythia-70m-hex.ipynb  resnet50_waterbirds_hf_divdis.ipynb  test_patching.ipynb  tiny_natural_mechanism_tasks.ipynb
scripts/: eap_mahalanobis_hex.py  gt_probe.py  hypothesis_tests.py  mt_detectors.py
