[tool.poetry]
name = "elk-experiments"
version = "0.1.0"
description = ""
authors = ["Oliver Daniels-Koch <danielskoch.oliver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
datasets = "^2.19.1"
einops = "^0.6.1"
accelerate = "^0.30.1"
blobfile = "^2.0.2"
ipywidgets = "^8.1.3"
ipdb = "^0.13.13"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
hydra-submitit-launcher = "^1.2.0"
cupbearer = {path = "cupbearer", develop = true}
eap = {path = "edge-attribution-patching", develop = true}
pytest = "^8.2.2"
pytest-doctestplus = "^1.2.1"
nbval = "^0.11.0"
nb-clean = "^3.3.0"
hex-nn = {path = "hex-nn", develop = true}
torch = "^2.3.1"
transformers = "^4.40.2"
huggingface-hub = "<=0.22.2"
transformer-lens = {path = "TransformerLens", develop = true}
auto-circuit = {path = "auto-circuit", develop = true}
kneed = "^0.8.5"
evaluate = "^0.4.2"
circuitsvis = {path = "CircuitsVis/python", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
